<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.HomeActivity"
    android:background="#F8F5F2">

    <RelativeLayout
        android:id="@+id/rlToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circulo"
            android:text="JI. Jayakatwang no 301"
            android:drawableRight="@drawable/pico_abajo_icon"
            android:padding="10dp"
            android:textSize="16sp"
            android:layout_centerVertical="true"/>

        <View
            android:id="@+id/vCampana"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/campana_icon"/>

        <View
            android:id="@+id/vNotificacion"
            android:layout_width="14sp"
            android:layout_height="14sp"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/vCampana"
            android:background="@mipmap/notificacion_icon"/>
    </RelativeLayout>


    <TextView
        android:id="@+id/tvUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rlToolbar"
        android:textSize="28dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="left"
        android:layout_margin="10dp"/>
    <TextView
        android:id="@+id/tvSaludoHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvUsuario"
        android:layout_marginTop="10dp"
        android:textColor="#8C8A8A"
        android:textSize="20dp"
        android:layout_margin="10dp"
        android:text="@string/saludo_home"/>

    <LinearLayout
        android:id="@+id/llContenedorIconosHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tvSaludoHome"
        android:layout_margin="10dp">

        <View
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:background="@mipmap/favorito_icon"
            android:layout_weight="1"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:background="@mipmap/favorito_icon1"
            android:layout_weight="1"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:background="@mipmap/tendencia_icon"
            android:layout_weight="1"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:background="@mipmap/mas_icon"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNombreIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/llContenedorIconosHome">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/favortios"
            android:textSize="14sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oferta"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tendencias"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/mas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mas"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvTituloPromocion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/llNombreIcon"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/promociones_home"
        android:textSize="24dp"
        android:layout_margin="10dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tvVerMas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTituloPromocion"
        app:layout_constraintBottom_toBottomOf="@id/tvTituloPromocion"
        android:text="@string/ver_mas"
        android:textSize="14dp"
        android:layout_margin="10dp"
        android:textColor="#E84C4F"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvImagen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloPromocion"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/menu"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>